# t1-dcc059-2025-1

./: .gitignore  CMakeLists.txt  exec  makefile  readme.md
instancias/: g_10_0.20_0_0_0.txt  g_10_0.20_0_0_1.txt  g_10_0.20_0_0_2.txt  g_10_0.20_0_1_0.txt  g_10_0.20_0_1_1.txt  g_10_0.20_0_1_2.txt  g_10_0.20_1_0_0.txt  g_10_0.20_1_0_1.txt  g_10_0.20_1_0_2.txt  g_10_0.20_1_1_0.txt  g_10_0.20_1_1_1.txt  g_10_0.20_1_1_2.txt  g_10_0.30_0_0_0.txt  g_10_0.30_0_0_1.txt  g_10_0.30_0_0_2.txt  g_10_0.30_0_1_0.txt  g_10_0.30_0_1_1.txt  g_10_0.30_0_1_2.txt  g_10_0.30_1_0_0.txt  g_10_0.30_1_0_1.txt  g_10_0.30_1_0_2.txt  g_10_0.30_1_1_0.txt  g_10_0.30_1_1_1.txt  g_10_0.30_1_1_2.txt  g_10_0.40_0_0_0.txt  g_10_0.40_0_0_1.txt  g_10_0.40_0_0_2.txt  g_10_0.40_0_1_0.txt  g_10_0.40_0_1_1.txt  g_10_0.40_0_1_2.txt  g_10_0.40_1_0_0.txt  g_10_0.40_1_0_1.txt  g_10_0.40_1_0_2.txt  g_10_0.40_1_1_0.txt  g_10_0.40_1_1_1.txt  g_10_0.40_1_1_2.txt  g_10_0.50_0_0_0.txt  g_10_0.50_0_0_1.txt  g_10_0.50_0_0_2.txt  g_10_0.50_0_1_0.txt  (+202 more)
src/: Aresta.cpp  Aresta.h  Gerenciador.cpp  Gerenciador.h  Grafo.cpp  Grafo.h  LeituraArquivos.cpp  LeituraArquivos.h  MinWeightDominatingSet.cpp  MinWeightDominatingSet.h  No.cpp  No.h  ProcessarInstancias.cpp  ProcessarInstancias.hpp  listaArestas.cpp  listaArestas.h  main.cpp
src/input/: g_25_0.16_0_1_0.txt  g_25_0.16_0_1_1.txt  g_25_0.21_0_1_0.txt  g_25_0.21_0_1_1.txt  g_25_0.26_0_1_0.txt  g_25_0.26_0_1_1.txt  g_40_0.10_0_1_0.txt  g_40_0.10_0_1_1.txt  g_40_0.15_0_1_0.txt  g_40_0.15_0_1_1.txt  g_40_0.20_0_1_0.txt  g_40_0.20_0_1_1.txt  g_50_0.04_0_0_2.txt  (+60 more)
(+1 files in other folders)
